--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# VITE_BACKEND=https://mock-backend-8zgl.onrender.com
+VITE_BACKEND=https://mock-backend-8zgl.onrender.com
 VITE_BACKEND=http://localhost:5000
